Finalizado cadastro do agendamento no Boostrap

--- a/laravel/resources/sass/app.scss
+++ b/laravel/resources/sass/app.scss
@@ -6,3 +6,8 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+//@import '~mdbootstrap/css/bootstrap.css';
+//@import '~mdbootstrap/css/mdb.css';
+
+@import '~mdbootstrap/scss/mdb-free';
