--- a/laravel/resources/css/caixa.css
+++ b/laravel/resources/css/caixa.css
@@ -304,15 +304,17 @@ h4 {
 .scrollbar-indigo::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #3f51b5; }
+    background-color: #ccc; }
 
 .scrollbar-indigo {
-    scrollbar-color: #3f51b5 #F5F5F5;
+    scrollbar-color: #ccc #F5F5F5;
 }
 
 .bordered-indigo::-webkit-scrollbar-track {
     -webkit-box-shadow: none;
-    border: 1px solid #3f51b5; }
+    border: 1px solid #ccc; }
 
 .thin::-webkit-scrollbar {
-    width: 6px; }
+    width: 4px; }
+
+
