--- a/css/app.css
+++ b/css/app.css
@@ -26994,6 +26994,33 @@ h4 {
     text-transform: capitalize;
 }
 
+.scrollbar-indigo::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: #F5F5F5;
+    border-radius: 10px; }
+
+.scrollbar-indigo::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5; }
+
+.scrollbar-indigo::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: #ccc; }
+
+.scrollbar-indigo {
+    scrollbar-color: #ccc #F5F5F5;
+}
+
+.bordered-indigo::-webkit-scrollbar-track {
+    -webkit-box-shadow: none;
+    border: 1px solid #ccc; }
+
+.thin::-webkit-scrollbar {
+    width: 4px; }
+
+
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
@@ -27003,5 +27030,9 @@ html {
 body {
     margin-bottom: 50px; /* Margin bottom by footer height */
     font-family: "helveticaregularregular", "Nunito", sans-serif !important;
+}
+
+main {
+    padding-top: 4.5rem !important;
 }
 
