--- a/laravel/resources/css/caixa.css
+++ b/laravel/resources/css/caixa.css
@@ -318,3 +318,21 @@ h4 {
     width: 4px; }
 
 
+.treeview-animated .treeview-animated-list .treeview-animated-items .closed:hover {
+    background-color: #EAEAEA;
+}
+
+.treeview-animated .treeview-animated-list .treeview-animated-items .open {
+    background-color: #EAEAEA;
+    transition: all 0.1s linear;
+}
+
+.treeview-animated .treeview-animated-list .treeview-animated-items .open span, 
+.treeview-animated .treeview-animated-list .treeview-animated-items .open:hover span {
+    color: rgba(0, 0, 0, 0.5) !important;
+}
+
+.treeview-animated .treeview-animated-list .treeview-animated-element:hover {
+    background-color: #EAEAEA;
+    cursor: inherit;
+}
